k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apprise-go
  labels:
    name: apprise-go
    app: apprise-go
